--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-expo-app",
+  "name": "strackfit",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,17 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.4",
+    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/native-stack": "^6.9.9",
     "expo": "~47.0.12",
+    "expo-checkbox": "~2.2.2",
     "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
+    "nativewind": "^2.0.11",
+    "pocketbase": "^0.11.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-web": "~0.18.9"
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-sse": "^1.1.0",
+    "react-native-web": "~0.18.9",
+    "zustand": "^4.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "tailwindcss": "^3.2.6",
     "typescript": "^4.6.3"
   },
   "private": true
