--- a/eas.json
+++ b/eas.json
@@ -13,6 +13,7 @@
     },
     "preview": {
       "distribution": "internal",
+      "channel": "preview",
       "ios": {
         "resourceClass": "m1-medium"
       }
