--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
+    "@tanstack/react-query": "^4.26.1",
+    "date-fns": "^2.29.3",
     "expo": "~47.0.12",
     "expo-checkbox": "~2.2.2",
+    "expo-keep-awake": "~11.0.1",
+    "expo-secure-store": "~12.0.0",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
     "nativewind": "^2.0.11",
