--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-screens": "~3.18.0",
     "react-native-sse": "^1.1.0",
     "react-native-web": "~0.18.9",
-    "zustand": "^4.3.3"
+    "zustand": "^4.3.3",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
