--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
     "@tanstack/react-query": "^4.26.1",
+    "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
     "expo": "~47.0.12",
     "expo-checkbox": "~2.2.2",
@@ -28,9 +29,12 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-sse": "^1.1.0",
+    "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.9",
     "zustand": "^4.3.3",
-    "react-native-svg": "13.4.0"
+    "expo-notifications": "~0.17.0",
+    "expo-haptics": "~12.0.1",
+    "expo-av": "~13.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
