--- a/package.json
+++ b/package.json
@@ -15,33 +15,33 @@
     "@tanstack/react-query": "^4.26.1",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
-    "expo": "~47.0.12",
-    "expo-checkbox": "~2.2.2",
-    "expo-keep-awake": "~11.0.1",
-    "expo-secure-store": "~12.0.0",
-    "expo-status-bar": "~1.4.2",
-    "expo-updates": "~0.15.6",
+    "expo": "^49.0.13",
+    "expo-av": "~13.4.1",
+    "expo-checkbox": "~2.4.0",
+    "expo-haptics": "~12.4.0",
+    "expo-keep-awake": "~12.3.0",
+    "expo-notifications": "~0.20.1",
+    "expo-secure-store": "~12.3.1",
+    "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.14",
     "nativewind": "^2.0.11",
     "pocketbase": "^0.11.1",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.72.5",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-sse": "^1.1.0",
-    "react-native-svg": "13.4.0",
-    "react-native-web": "~0.18.9",
-    "zustand": "^4.3.3",
-    "expo-notifications": "~0.17.0",
-    "expo-haptics": "~12.0.1",
-    "expo-av": "~13.0.3"
+    "react-native-svg": "13.9.0",
+    "react-native-web": "~0.19.6",
+    "zustand": "^4.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~18.0.14",
+    "@types/react": "~18.2.14",
     "@types/react-native": "~0.70.6",
     "tailwindcss": "^3.2.6",
-    "typescript": "^4.6.3"
+    "typescript": "^5.1.3"
   },
   "private": true
 }
