--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-native-sse": "^1.1.0",
     "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
-    "zustand": "^4.3.3"
+    "zustand": "^4.3.3",
+    "@react-native-async-storage/async-storage": "1.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
