--- a/app.json
+++ b/app.json
@@ -1,42 +1,54 @@
 {
-  "expo": {
-    "name": "strackfit",
-    "slug": "strackfit",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./src/assets/icon.png",
-    "userInterfaceStyle": "dark",
-    "splash": {
-      "image": "./src/assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0,
-      "url": "https://u.expo.dev/b009ae2f-ffbd-4d3f-b28a-324441279226"
-    },
-    "assetBundlePatterns": ["**/*"],
-    "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.timostrackfeldt.strackfit"
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./src/assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
-      }
-    },
-    "web": {
-      "favicon": "./src/assets/favicon.png"
-    },
-    "extra": {
-      "eas": {
-        "projectId": "b009ae2f-ffbd-4d3f-b28a-324441279226"
-      }
-    },
-    "runtimeVersion": {
-      "policy": "sdkVersion"
+    "expo": {
+        "name": "strackfit",
+        "slug": "strackfit",
+        "version": "1.0.0",
+        "orientation": "portrait",
+        "icon": "./src/assets/icon.png",
+        "userInterfaceStyle": "dark",
+        "splash": {
+            "image": "./src/assets/splash.png",
+            "resizeMode": "contain",
+            "backgroundColor": "#ffffff"
+        },
+        "updates": {
+            "fallbackToCacheTimeout": 0,
+            "url": "https://u.expo.dev/b009ae2f-ffbd-4d3f-b28a-324441279226"
+        },
+        "assetBundlePatterns": ["**/*"],
+        "ios": {
+            "supportsTablet": true,
+            "bundleIdentifier": "com.timostrackfeldt.strackfit"
+        },
+        "android": {
+            "adaptiveIcon": {
+                "foregroundImage": "./src/assets/adaptive-icon.png",
+                "backgroundColor": "#FFFFFF"
+            }
+        },
+        "web": {
+            "favicon": "./src/assets/favicon.png"
+        },
+        "extra": {
+            "eas": {
+                "projectId": "b009ae2f-ffbd-4d3f-b28a-324441279226"
+            }
+        },
+        "runtimeVersion": {
+            "policy": "sdkVersion"
+        },
+        "plugins": [
+            [
+                "expo-build-properties",
+                {
+                    "ios": {
+                        "newArchEnabled": true
+                    },
+                    "android": {
+                        "newArchEnabled": true
+                    }
+                }
+            ]
+        ]
     }
-  },
-  "jsEngine": "hermes"
 }
