--- a/package.json
+++ b/package.json
@@ -1,52 +1,45 @@
 {
-    "name": "strackfit",
-    "version": "1.0.0",
-    "main": "src/main.tsx",
-    "scripts": {
-        "start": "expo start",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
-        "web": "expo start --web"
-    },
-    "dependencies": {
-        "@gorhom/bottom-sheet": "^4.6.0",
-        "@react-native-async-storage/async-storage": "1.23.1",
-        "@react-navigation/bottom-tabs": "^6.5.4",
-        "@react-navigation/native": "^6.1.3",
-        "@react-navigation/native-stack": "^6.9.9",
-        "@tanstack/react-query": "^5.37.1",
-        "babel-plugin-react-compiler": "^0.0.0-experimental-592953e-20240517",
-        "clsx": "^2.1.1",
-        "date-fns": "^3.6.0",
-        "expo": "^51.0.8",
-        "expo-av": "~14.0.5",
-        "expo-build-properties": "~0.12.1",
-        "expo-checkbox": "~3.0.0",
-        "expo-haptics": "~13.0.1",
-        "expo-keep-awake": "~13.0.2",
-        "expo-notifications": "~0.28.3",
-        "expo-secure-store": "~13.0.1",
-        "expo-status-bar": "~1.12.1",
-        "expo-updates": "~0.25.14",
-        "nativewind": "^2.0.11",
-        "pocketbase": "^0.21.2",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "react-native": "0.74.1",
-        "react-native-gesture-handler": "~2.16.2",
-        "react-native-reanimated": "~3.10.1",
-        "react-native-safe-area-context": "4.10.1",
-        "react-native-screens": "~3.31.1",
-        "react-native-sse": "^1.1.0",
-        "react-native-svg": "15.2.0",
-        "react-native-web": "~0.19.6",
-        "zustand": "^4.3.3"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.12.9",
-        "@types/react": "~18.2.79",
-        "tailwindcss": "^3.2.6",
-        "typescript": "~5.3.3"
-    },
-    "private": true
+  "name": "strackfit",
+  "version": "1.0.0",
+  "main": "expo-router/entry",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
+  },
+  "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/native": "^6.1.3",
+    "@tanstack/react-query": "^5.37.1",
+    "babel-plugin-react-compiler": "^0.0.0-experimental-592953e-20240517",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "expo": "^51.0.8",
+    "expo-build-properties": "~0.12.1",
+    "expo-constants": "~16.0.1",
+    "expo-haptics": "~13.0.1",
+    "expo-keep-awake": "~13.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.14",
+    "expo-secure-store": "~13.0.1",
+    "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.14",
+    "nativewind": "^2.0.11",
+    "pocketbase": "^0.21.2",
+    "react": "18.2.0",
+    "react-native": "0.74.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "zustand": "^4.3.3",
+    "@expo/vector-icons": "^14.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.9",
+    "@types/react": "~18.2.79",
+    "tailwindcss": "^3.2.6",
+    "typescript": "~5.3.3"
+  },
+  "private": true
 }
